change converted texture overlay storage